testsuite/bsc.bugs/github/gh276/SuggestStringOf_TwoCon_IntegerContext.bsv.bsc-out.expected
checking package dependencies
compiling SuggestStringOf_TwoCon_IntegerContext.bsv
Error: "SuggestStringOf_TwoCon_IntegerContext.bsv", line 12, column 11: (T0003)
  Unbound constructor `Name'. Perhaps `stringOf' is missing?
