testsuite/bsc.bugs/github/gh276/SuggestStringOf_TwoCon_IntegerContext.bsv
typedef union tagged {
  Bit#(16) DataWidth;
} T1;

typedef union tagged {
  Bit#(8) DataWidth;
} T2;

typedef "Foo" Name;

function String getName();
   return Name;
endfunction
